Remove links from error pages. Fix 'share this comic' overflow in smaller screens

--- a/app/assets/stylesheets/_mediaQueries.scss
+++ b/app/assets/stylesheets/_mediaQueries.scss
@@ -18,6 +18,12 @@
 // For the footer icons
 // ----------------------------------------------
 @media (max-width: 445px){
+	.comment p:last-of-type {
+		position: initial;
+		display: block;
+		text-align: end;
+		margin-top: 6px;
+	}
 	footer {
 		height: 250px;
 		width: 100%;
